cmake_minimum_required(VERSION 3.19)
project(DataStructureAndAlgorithmInCPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(DataStructureAndAlgorithmInCPP main.cpp BruteForceSubstringSearch.cpp BruteForceSubstringSearch.h SubstringSearchTest.cpp SubstringSearchTest.h KnuthMorrisPratt.cpp KnuthMorrisPratt.h)